more font/spacing fixes

--- a/_sass/custom/nav.scss
+++ b/_sass/custom/nav.scss
@@ -18,8 +18,18 @@
     }
   }
   .subnav {
+    padding-top: 14px;
     .nav__item {
+      height: 3em;
+      padding-top: 1em;
+      padding-bottom: 1em;
       background-color: $light;
+      &:hover {
+        background-color: $light;        
+      }
+      a.nav__link {
+        padding: 0; 
+      }
     }
   }
 }
