--- a/_sass/custom/text.scss
+++ b/_sass/custom/text.scss
@@ -1,5 +1,5 @@
 html {
-  font-size: 18px; // reset rem
+  font-size: 20px; // reset rem
   @include media-breakpoint-down(sm) {
     font-size: 16px;
   }
@@ -42,8 +42,8 @@ h3, .h3, h5, .h5, h6, .h6 {
   color: $primary;
   font-weight: 700;
   font-size: 27px;
-  margin-top: 27px;
-  margin-bottom: 27px;
+  margin-top: 19px;
+  margin-bottom: 19px;
   line-height: 32px;
   @include media-breakpoint-down(sm) {
     font-size: 20px;
@@ -54,7 +54,6 @@ h3, .h3, h5, .h5, h6, .h6 {
 h5, .h5, .h5 {
   font-size: 25px;
   margin-top: 25px;
-  margin-bottom: 25px;
   
   letter-spacing: 1.88px;
   
@@ -88,8 +87,6 @@ h6, .h6 {
 h4, .h4 {
   font-weight: bold;
   font-size: 24px; 
-  margin-top: 24px;
-  margin-bottom: 24px;
   
   line-height: 32px;
   @include media-breakpoint-down(sm) {
