--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -1,6 +1,10 @@
 .home-features {
+  padding-top: 90px;
   padding-bottom: 25px;
   .image-content {
     height: 300px;
+  }
+  p {
+    font-size: 18px;
   }
 }
